Fix Gallery images out of bounds in ff. Fixes: #365 finally.

--- a/profile/themes/openculturas_base/css/wysiwyg.css
+++ b/profile/themes/openculturas_base/css/wysiwyg.css
@@ -10844,6 +10844,7 @@ details {
   border: 0;
   border-top: 1px solid var(--color-divider-light);
   padding: 0 1.25rem;
+  width: 100%;
 }
 details.form-wrapper {
   margin: 0;
@@ -11399,6 +11400,7 @@ button[type=submit].button--danger:active {
 
 .field {
   margin: 1rem 0;
+  max-width: 100%;
 }
 .field .field__item > p:first-child {
   margin-top: 0;
