--- a/profile/themes/openculturas_base/templates/field/field.scss
+++ b/profile/themes/openculturas_base/templates/field/field.scss
@@ -1,5 +1,6 @@
 .field {
   margin: 1rem 0;
+  max-width: 100%; // Required by ff.
 
   .field__item {
     > p:first-child {
